edition = "2023";  // successor to proto2 and proto3

package central;
import "google/protobuf/go_features.proto";

option go_package = "./internalapi/central;central";
option features.(pb.go).api_level = API_HYBRID;
option features.field_presence = IMPLICIT;
option features.enum_type = OPEN;
// `packed=false` needs to be transformed to field-level repeated_field_encoding
// features in Editions syntax
option features.json_format = ALLOW;
option features.utf8_validation = VERIFY;

// ClusterMetrics defines a set of metrics, which are collected by Sensor and
// send to Central.
message ClusterMetrics {
  int64 node_count = 1; // The number of nodes in the cluster accessible by Sensor.
  int64 cpu_capacity = 2; // The total cpu capacity of all nodes accessible by Sensor.
  string compliance_operator_version = 3; // Compliance operator version discovered by this Sensor.
}
